# PiClawOS

./: .gitattributes  .gitignore  LICENSE  NEXT_SESSION.md  PiClaw-OS-Handbuch-v0.13.3.docx  PiClaw-OS-Manual-v0.15-EN.docx  README.md  SECURITY.md  benchmark_regex.py  build_handbuch.js  build_manual_en.js  example-soul.md  final_regex_test.py  fix_ruff.py  fix_ruff_callable.py  fix_ruff_imports.py  handbuch_de.cjs  handbuch_de.mjs  manual_en.cjs  package-lock.json  patch_marketplace.py  pr_body.txt  pr_desc.md  repro_bug.py  repro_space.py  test_cleaning.py  test_regex.py
piclaw-os/: .gitignore  CHANGELOG.md  CLAUDE_REBUILD.md  DEV_REFERENCE.md  GAPS.md  Makefile  README.md  ROADMAP.md  install.sh  pyproject.toml  watchdog.toml
piclaw-os/.jules/: bolt.md  sentinel.md
piclaw-os/cloud-init/: meta-data.yml  user-data.yml
piclaw-os/docs/: AGENTS.md  BUG_marketplace_search.md  PiClaw-OS-Handbuch-v0.15.4.docx  PiClaw-OS-Handbuch-v0.15.docx  PiClaw-OS-Handbuch-v0.17.1.docx  PiClaw-OS-Manual-v0.13.3-EN.docx  PiClaw-OS-Manual-v0.15.4-EN.docx  multi-llm.md  soul.md  subagents.md  windows-build.md
piclaw-os/piclaw/: agent.py  api.py  auth.py  backup.py  briefing.py  cli.py  config.py  daemon.py  fileutils.py  ipc.py  metrics.py  proactive.py  routines.py  secrets.py  soul.py  taskutils.py  wizard.py
piclaw-os/scripts/: backfill_inbox_refs.py  debug_hermes_tn.py  debug_parcel_monitor.py  test_telegram_fallback.py
piclaw-os/systemd/: piclaw-crawler.service  piclaw-tandem.service
piclaw-os/tests/: conftest.py  test_agentmail.py  test_api_autodetect.py  test_api_services.py  (+26 more)
(+179 files in other folders)
