[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "piclaw"
version = "0.15.4"
description = "PiClaw – AI Operating System for Raspberry Pi 5"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "scrapling>=0.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "websockets>=12",
    "tomli-w>=1.0",
    "psutil>=5.9",
    "croniter>=1.4",
    # Timezone detection from coordinates (used in setup wizard)
    "timezonefinder>=6.2",
    # Local LLM (CPU-only build for Pi 5 arm64)
    "llama-cpp-python>=0.2.90",
    # Messaging adapters
    "discord.py>=2.3",
    "threema.gateway[e2e]>=8.0",
    # MQTT adapter (optional - v0.10)
    "aiomqtt>=2.0; extra == 'mqtt'",
    # Email for AI Agents
    "agentmail>=0.4.0",
    # Camera (optional - v0.10, installed separately)
    # libcamera-apps via apt, fswebcam via apt
    # smbus2 already in hardware deps
    # GPIO (only installs on actual Pi hardware)
    "RPi.GPIO>=0.7.1; platform_machine=='aarch64'",
    "gpiozero>=2.0; platform_machine=='aarch64'",
]

[project.optional-dependencies]
dev  = ["httpx", "pytest", "pytest-asyncio"]

[project.scripts]
piclaw           = "piclaw.cli:main"
piclaw-agent     = "piclaw.daemon:run"
piclaw-crawler   = "piclaw.agents.crawler:run"
piclaw-watchdog  = "piclaw.agents.watchdog:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["piclaw*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
